Fixed contact form zooming, updated README

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 				<div id="content-home">
 					<h1>Home</h1>
 					<p>
-						Welcome! This is my personal website, presumably for professional purposes. (It's actually my JavaScript playground.)
+						Welcome! This is my personal website, presumably for professional purposes. (It's actually my JavaScript playground!)
 						<br> <br>
-						Anyways, feel free to browse around!
+						Anyways, feel free to browse around! If you're curious, <a href="https://github.com/glng7121/personal-site">here</a> is the GitHub repository for this site.
 					</p>
 				</div>
 				
@@ -161,9 +161,9 @@
 						
 						<form id="contact-form" target="_blank" method="POST">
 							<h2 style="text-align: center; color: #42bbc9;">Send me a message!</h2><br>
-							<input type="text" placeholder="Your name" name="_sendername"> <br>
-							<input type="email" placeholder="Your email address" name="_replyto"> <br>
-							<textarea id="msg-contact-form" placeholder="Your message" name="_msg"></textarea> <br> <br>
+							<input style="width: 50%;" type="text" placeholder="Your name" name="_sendername"> <br>
+							<input style="width: 50%;" type="email" placeholder="Your email address" name="_replyto"> <br>
+							<textarea style="width: 95%;" id="msg-contact-form" placeholder="Your message" name="_msg"></textarea> <br> <br>
 							All fields are optional. Pressing the submit button will open a new tab with a reCAPTCHA from Formspree that you must complete. <br> <br>
 							<button id="btn-contact-form" type="submit"> Submit! </button>
 						</form>
