Added github repo links to project page

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 											<li>Finally...port to Android.</li>
 										</ul>
 									</li>
+									<li><a href="https://github.com/glng7121/list-app-wp">Click here for the GitHub repository.</a></li>
 								</ul>
 							</li>
 							<li> Oct. 2017 - present: This website!
@@ -96,6 +97,7 @@
 											<li>Replace jQuery animations with GreenSock for faster animations.</li>
 										</ul>
 									</li>
+									<li><a href="https://github.com/glng7121/personal-site">Click here for the GitHub repository.</a></li>
 								</ul>
 							 </li>
 						</ul>
