made resume pdf's scaling more mobile-friendly

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ entry.766027190=junkSenderEmail&entry.1753659212=junkMessage
 					<p>
 						If the pdf viewer below isn't working, you can open my resume in another tab <a href="gladys_resume.pdf" target="_blank">here</a>!
 						<br> <br>
-						<iframe src="gladys_resume.pdf?#zoom=85&scrollbar=0&navpanes=0" width="1000" height="360"></iframe>
+						<iframe src="gladys_resume.pdf?scrollbar=0&navpanes=0" width="100%" height="400em"></iframe>
 					</p>
 				</div>
 			</td>
