update resume, project list, contact form message

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                 <h1>Projects</h1>
 				<p> 
                     <ul class="projectList"> <h2>Personal Projects</h2>
-                        <li>July 2018 - Current: Exercise web app that lets you customize and run workouts.
+                        <li>July 2018 - October 2018: Exercise web app that lets you customize and run workouts
                             <ul class="projectDescrip">
 								<li>Customizable workout name, exercise, break time, and sets</li>
                                 <li>During workout run, announces set reps and break time countdowns with voiceovers from Azure's Text-to-Speech API</li>
-                                <li>React.js front-end with an Express.js server that serves cached voiceovers</li>
+                                <li>React.js front-end with a quick Express.js server that serves cached voiceovers</li>
 								<li><a href="https://sleepy-reef-41418.herokuapp.com/">Demo</a> and <a href="https://github.com/glng7121/exercise-app">source code</a>
 								<li>Casually developing for my dad and myself</li>
                             </ul>
@@ -91,6 +91,16 @@
                 </p>
                 <p> 
                     <ul class="projectList"> <h2>Coursework Projects</h2>
+						<li>October 2018 - December 2018: Domino simulator game to build and knock domino chains over
+                            <ul class="projectDescrip">
+                                <li>Assignment for Software Engineering course (CS130 at UCLA). 5-person group project</li>
+								<li>Implemented build features like undo, rectangular mass-select, and copy-preview-paste dominos</li>
+                                <li>Wrote all Unity Test Runner tests to manipulate dominos and save domino chains</li>
+                                <li>Language: C# on Unity</li>
+								<li><a href="https://github.com/rzhang19/domino_game">Source code</a></li>
+								<li>Working on getting a demo up. For now, <a href="https://youtu.be/MM9wGFLAf9E">here's</a> a 4-minute demo video that our group submitted for class</li>
+                            </ul>
+                        </li>
                         <li>February 2018 - March 2018: MEAN stack blog site where authenticated users can edit their posts
                             <ul class="projectDescrip">
                                 <li>Assignment for Web Applications course (CS144 at UCLA). 2-person group project</li>
@@ -149,7 +159,7 @@
                             <td><a href="https://github.com/glng7121" target="_blank">github.com/glng7121</a></td>
                         </tr>
                     </table>
-                    Alternatively, you can send me a message using the form below.
+                    Alternatively, you can send me a message using the form below. That would make my day, because no one uses it. :(
                     <br> <br> <br>
 
                     <form id="contact-form" method="GET" action="https://script.google.com/macros/s/AKfycbyJeAz54634IS8p7Trbh-8Ce98YOVdTxMTwcbCAsaD4GU0wEFny/exec">
